create icon /khachhang , save khachhang database

--- a/BlazorKhachHang/Components/Layout/Layoutgeneral.razor
+++ b/BlazorKhachHang/Components/Layout/Layoutgeneral.razor
@@ -21,6 +21,9 @@
         <button type="submit">SEARCH</button>
     </form>
     <div class="user-icons">
+        <a href="/khachhang" class="user-icon">
+            <i class="fa-solid fa-users"></i>
+        </a>
         <a href="login" class="user-icon" id="userIcon">
             <i class="fa-regular fa-user"></i>
         </a>
